# blender-vse-otio-support

./: CONTRIBUTING.md  LICENSE  PROPOSAL.md  README.md  design.md  timeline.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  implementation_note.md
research/: blender_seq_internals.md  comparable_implementations.md  otio_api_notes.md  vse_io_audit.md
scripts/: build_test_env.sh  generate_fixtures.py  validate_roundtrip.py
src/io_otio/: CMakeLists.txt  IO_otio.hh
src/io_otio/intern/: otio_export.cc  otio_import.cc  otio_utils.cc
src/tests/: CMakeLists.txt  test_export.cc  test_import.cc  test_timecode.cc
src/tests/fixtures/: cross_fps_23976.otio  image_sequence.otio  missing_media.otio  multi_track.otio  simple_movie.otio  with_transitions.otio
